[package]
name = "wasm-as-html"
version = "0.0.0"
edition = "2021"
rust-version = "1.82"

[dependencies]
wasm-encoder = "0.20"
wasmparser = "0.95"
[dependencies.clap]
version = "4"
features = ["derive"]
[dependencies.base64]
version = "0.21.4"
default-features = false
features = ["alloc"]
[dependencies.lithtml]
version = "0.6.0"
optional = true
[dependencies.html_and_tar]
workspace = true

[features]
default = ["target-html+tar"]
"target-html+tar" = ["dep:lithtml"]

[workspace]
members = [
  ".",
  "lib/html_and_tar",
  "wasi-loader/interpret",
  "stage3/unzip",

  # Application for stage3/unzip
  "examples/wasi/plotters-normal-2d",
]

[workspace.dependencies]
html_and_tar = { path = "lib/html_and_tar" }

[profile.release]
opt-level = 's'
strip = true
